[package]
edition = "2018"
name = "generate_config"
version = "0.1.0"

[dependencies]
#
anyhow = {workspace = true}
scrypto = {workspace = true}
common = {workspace = true}
#
Inflector = "0.11.4"
convert_case = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}

[lib]
proc-macro = true
